--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: lint
 
 on:
   push:
@@ -12,37 +12,15 @@ on:
 
 jobs:
   lint:
-  
+
     if: contains(toJson(github.event.commits), '[skip ci]') == false
 
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - uses: azure/setup-helm@v1
+      - uses: azure/setup-helm@v1
 
-    - name: Lint
-      run: helm lint charts/*
-  
-  release:
-
-    if: contains(github.ref, "master") && contains(github.event, "push")
-
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Configure Git
-      run: |
-        git config user.name "$GITHUB_ACTOR"
-        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
-    - name: Release Charts
-      uses: helm/chart-releaser-action@v1.0.0-rc.1
-      with:
-        charts_dir: charts/
-        charts_repo_url: http://www.qwyck.co.uk/helm-charts/
-      env:
-        CR_TOKEN: "${{ secrets.CHART_RELEASER_TOKEN }}"
+      - name: Lint
+        run: helm lint charts/*
