--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: azure/setup-helm@v1
+        with:
+          version: '2.16.5'
 
       - name: Lint
         run: helm lint charts/*
