feat: add actuator endpoints to configmap

--- a/charts/ifsc-ical-generator/values.yaml
+++ b/charts/ifsc-ical-generator/values.yaml
@@ -79,4 +79,8 @@ applicationConfig:
   external:
     ifsc:
       host: "http://egw.ifsc-climbing.org"
-
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: health,info,metrics
