--- a/charts/ifsc-ical-generator/templates/deployment.yaml
+++ b/charts/ifsc-ical-generator/templates/deployment.yaml
@@ -1,6 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ include "ifsc-ical-generator.fullname" . }}
   labels:
   {{- include "ifsc-ical-generator.labels" . | nindent 4 }}
