--- a/charts/ifsc-ical-generator/templates/rbac.yaml
+++ b/charts/ifsc-ical-generator/templates/rbac.yaml
@@ -20,7 +20,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: {{ include "ifsc-ical-generator.serviceAccountName" . }}
-    namespace: default
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
   name: {{ include "ifsc-ical-generator.fullname" . }}
