--- a/charts/ifsc-ical-generator/templates/serviceaccount.yaml
+++ b/charts/ifsc-ical-generator/templates/serviceaccount.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ include "ifsc-ical-generator.serviceAccountName" . }}
   labels:
   {{- include "ifsc-ical-generator.labels" . | nindent 4 }}
