--- a/charts/ifsc-ical-generator/templates/tests/test-connection.yaml
+++ b/charts/ifsc-ical-generator/templates/tests/test-connection.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: "{{ include "ifsc-ical-generator.fullname" . }}-test-connection"
   labels:
   {{- include "ifsc-ical-generator.labels" . | nindent 4 }}
