--- a/charts/ifsc-ical-generator/templates/tests/test-connection.yaml
+++ b/charts/ifsc-ical-generator/templates/tests/test-connection.yaml
@@ -12,5 +12,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "ifsc-ical-generator.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "ifsc-ical-generator.fullname" . }}:{{ .Values.service.port }}/actuator/health']
   restartPolicy: Never
