--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
         uses: helm/chart-testing-action@v1.0.0-rc.1
         with:
           command: lint
+          config: ct.yaml
 
       - name: Kind
         uses: helm/kind-action@v1.0.0-alpha.3
@@ -36,3 +37,4 @@ jobs:
         uses: helm/chart-testing-action@v1.0.0-rc.1
         with:
           command: install
+          config: ct.yaml
