--- a/charts/ifsc-ical-generator/values.yaml
+++ b/charts/ifsc-ical-generator/values.yaml
@@ -28,7 +28,7 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/issuer: "letsencrypt-prod"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
   hosts:
     - host: ifsc.qwyck-cloud.co.uk
       paths: ["/"]
