--- a/releases/prod/ifsc-ical-generator.yaml
+++ b/releases/prod/ifsc-ical-generator.yaml
@@ -2,13 +2,13 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: ifsc-ical-generator-prod
+  name: ifsc-ical-generator
   namespace: prod
   annotations:
     fluxcd.io/automated: "true"
     filter.fluxcd.io/chart-image: semver:^1.0.0
 spec:
-  releaseName: ifsc-ical-generator-prod
+  releaseName: ifsc-ical-generator
   chart:
     git: git@github.com:jrmcdonald/helm-charts
     path: charts/ifsc-ical-generator
