refactor: reduce requests in line with usage

--- a/charts/ifsc-ical-generator/values.yaml
+++ b/charts/ifsc-ical-generator/values.yaml
@@ -63,11 +63,11 @@ probes:
 
 resources:
   limits:
-    cpu: 500m
-    memory: 1Gi
+    cpu: 100m
+    memory: 400M
   requests:
-    cpu: 500m
-    memory: 1Gi
+    cpu: 100m
+    memory: 400M
 
 nodeSelector: {}
 
