--- a/charts/ifsc-ical-generator/values.yaml
+++ b/charts/ifsc-ical-generator/values.yaml
@@ -29,13 +29,18 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      location ~ /actuator {
+        deny all;
+        return 403;
+      }
   hosts:
-    - host: ifsc.qwyck-cloud.co.uk
-      paths: ["/"]
+    - host: api.qwyck-cloud.co.uk
+      paths: ["/ifsc"]
   tls:
-    - secretName: ifsc-ical-generator-tls
+    - secretName: api-qwyck-cloud-tls
       hosts:
-        - ifsc.qwyck-cloud.co.uk
+        - api.qwyck-cloud.co.uk
 
 ports:
   - name: http
@@ -79,7 +84,6 @@ applicationConfig:
   external:
     ifsc:
       host: "http://egw.ifsc-climbing.org"
-
   management:
     endpoint:
       restart:
@@ -88,6 +92,9 @@ applicationConfig:
       web:
         exposure:
           include: health,info,metrics,restart
+  server:
+    servlet:
+      contextPath: /ifsc
   spring:
     cloud:
       kubernetes:
