--- a/releases/prod/ms-customer-entity.yaml
+++ b/releases/prod/ms-customer-entity.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     git: git@github.com:jrmcdonald/helm-charts
     path: charts/ms-customer-entity
-    ref: master
+    ref: main
   values:
     image:
       repository: jrmcdonald/ms-customer-entity
