--- a/charts/ms-customer-entity/values.yaml
+++ b/charts/ms-customer-entity/values.yaml
@@ -69,10 +69,10 @@ probes:
 resources:
   limits:
     cpu: 100m
-    memory: 400M
+    memory: 1Gi
   requests:
     cpu: 100m
-    memory: 400M
+    memory: 1Gi
 
 nodeSelector: {}
 
