fix: remove access to secrets

--- a/charts/ms-customer-entity/templates/rbac.yaml
+++ b/charts/ms-customer-entity/templates/rbac.yaml
@@ -6,7 +6,7 @@ metadata:
   {{- include "ms-customer-entity.labels" . | nindent 4 }}
 rules:
   - apiGroups: ["", "extensions", "apps"]
-    resources: ["configmaps", "pods", "services", "endpoints", "secrets", "namespaces"]
+    resources: ["configmaps", "pods", "services", "endpoints", "namespaces"]
     verbs: ["get", "list", "watch", "edit", "view"]
 
 ---
