feat: manually specify openapi server information

--- a/charts/ms-customer-entity/values.yaml
+++ b/charts/ms-customer-entity/values.yaml
@@ -81,6 +81,10 @@ applicationConfig:
       web:
         exposure:
           include: health,info,metrics,prometheus,restart
+  openapi:
+    servers:
+      - url: http://ms-customer-entity.prod/customer-entity
+        description: Customer-Entity internal service
   server:
     servlet:
       contextPath: /customer-entity
