Revert "fix: temp remove liveness probes from entity"
This reverts commit ac6f488f

--- a/charts/ms-customer-entity/values.yaml
+++ b/charts/ms-customer-entity/values.yaml
@@ -33,11 +33,23 @@ ports:
     protocol: TCP
 
 probes:
+  livenessProbe:
+    httpGet:
+      path: /customer-entity/actuator/health/liveness
+      port: http
+    periodSeconds: 5
+    failureThreshold: 1
   readinessProbe:
     httpGet:
       path: /customer-entity/actuator/health/readiness
       port: http
     periodSeconds: 5
+  startupProbe:
+    httpGet:
+      path: /customer-entity/actuator/health/liveness
+      port: http
+    periodSeconds: 3
+    failureThreshold: 8
 
 resources:
   limits:
