--- a/charts/ms-openapi-gateway/values.yaml
+++ b/charts/ms-openapi-gateway/values.yaml
@@ -26,8 +26,10 @@ service:
 
 ambassador:
   enabled: true
-  prefix: /openapi-gateway/
-  rewrite: /
+  mapping:
+    prefix: /openapi-gateway/(swagger-config\.json|webjars\/.*|api.*)
+    prefix_regex: true
+    service: http://ms-openapi-gateway
 
 ports:
   - name: http
@@ -79,22 +81,17 @@ applicationConfig:
       web:
         exposure:
           include: health,info,metrics,prometheus,restart
-  spring:
-    cloud:
-      kubernetes:
-        reload:
-          strategy: restart_context
   openapi:
     endpoints:
       customer-orchestration:
         gateway-prefix: /openapi-gateway
         service-url: http://ms-customer-orchestration.prod
-        service-prefix: /customer-orchestration
+        service-prefix: /api/customer-orchestration
         service-path: /v3/api-docs
       customer-entity:
         gateway-prefix: /openapi-gateway
         service-url: http://ms-customer-entity.prod
-        service-prefix: /customer-entity
+        service-prefix: /api/customer-entity
         service-path: /v3/api-docs
   springdoc:
     swagger-ui:
