--- a/charts/ms-openapi-gateway/templates/ambassador.yaml
+++ b/charts/ms-openapi-gateway/templates/ambassador.yaml
@@ -7,5 +7,7 @@ metadata:
   labels:
   {{- include "ms-openapi-gateway.labels" . | nindent 4 }}
 spec:
-  {{- toYaml .Values.ambassador.mapping | nindent 2 }}
+  prefix: {{ .Values.ambassador.prefix }}
+  rewrite: {{ .Values.ambassador.rewrite }}
+  service: http://{{ include "ms-openapi-gateway.fullname" . }}
   {{- end }}
