--- a/charts/ms-openapi-gateway/templates/ambassador.yaml
+++ b/charts/ms-openapi-gateway/templates/ambassador.yaml
@@ -1,13 +1,14 @@
 {{- if .Values.ambassador.enabled -}}
+  {{- range $key, $mapping := .Values.ambassador.mappings }}
+---
 apiVersion: getambassador.io/v2
 kind:  Mapping
 metadata:
-  namespace: {{ .Release.Namespace }}
-  name: {{ include "ms-openapi-gateway.fullname" . }}
+  namespace: {{ $.Release.Namespace }}
+  name: {{ printf "%s-%s" (include "ms-openapi-gateway.fullname" $) $key }}
   labels:
-  {{- include "ms-openapi-gateway.labels" . | nindent 4 }}
+    {{- include "ms-openapi-gateway.labels" $ | nindent 4 }}
 spec:
-  prefix: {{ .Values.ambassador.prefix }}
-  rewrite: {{ .Values.ambassador.rewrite }}
-  service: http://{{ include "ms-openapi-gateway.fullname" . }}
-  {{- end }}
+  {{- toYaml $mapping | nindent 4 }}
+    {{- end }}
+    {{- end }}
