--- a/charts/ms-customer-entity/values.yaml
+++ b/charts/ms-customer-entity/values.yaml
@@ -76,9 +76,18 @@ applicationConfig:
         exposure:
           include: health,info,metrics,prometheus
   openapi:
+    title: Customer Entity
+    description: Customer Entity API
+    version: 1.0.0
+    security:
+      scheme: client-credentials
+      authorization-url: https://qwyck.eu.auth0.com/oauth/auth
+      refresh-url: https://qwyck.eu.auth0.com/oauth/token
+      token-url: https://qwyck.eu.auth0.com/oauth/token
+      scopes: CUSTOMER_READ,CUSTOMER_WRITE
     servers:
-      - url: http://ms-customer-entity.prod
-        description: Customer-Entity internal service
+        - url: http://ms-customer-entity.prod
+          description: Customer-Entity internal service
   spring:
     datasource:
       url: jdbc:postgresql://ms-customer-entity-postgresql.prod:5432/postgres
